[package]
name = "gold-monitor"
version = "1.0.0"
edition = "2021"
authors = ["ahmadkholil"]

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot"] }
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["compression-full", "cors", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.13"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate"], default-features = false }
scraper = "0.19"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5"
bytes = "1"
flume = "0.11"
compact_str = { version = "0.7", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
arc-swap = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
url = "2"
http = "1"
pin-project-lite = "0.2"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
target-cpu = "native"

[profile.release.build-override]
opt-level = 3
